--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_TARGET=
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/Lwc1998/InfiniR_kernel_alioth
+KERNEL_SOURCE_BRANCH=13.0-alioth
+KERNEL_TARGET=Alioth
 BUILD_ARGS:CC=clang LD=ld.lld
