--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-ANYKERNEL_SOURCE=
+ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/Lwc1998/InfiniR_kernel_alioth
 KERNEL_SOURCE_BRANCH=13.0-alioth
