--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/Lwc1998/InfiniR_kernel_alioth
-KERNEL_SOURCE_BRANCH=13.0-alioth
-KERNEL_TARGET=Alioth
+KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource/tree/elish-r-oss
+KERNEL_SOURCE_BRANCH=elish-r-oss
+KERNEL_TARGET=elioth
 BUILD_ARGS:CC=clang LD=ld.lld
