--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource/tree/elish-r-oss
 KERNEL_SOURCE_BRANCH=elish-r-oss
-KERNEL_TARGET=elioth
+KERNEL_TARGET=elish
 BUILD_ARGS:CC=clang LD=ld.lld
